--- a/PositionIn/PaymentSystems/Interface/CommonTransactionStatusView/CommonTransactionStatusView.xib
+++ b/PositionIn/PaymentSystems/Interface/CommonTransactionStatusView/CommonTransactionStatusView.xib
@@ -8,51 +8,83 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CommonTransactionStatusView" customModule="PositionIn" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CommonTransactionStatusView" customModule="PositionIn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="154"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="i6p-db-fkN">
-                    <rect key="frame" x="190" y="67" width="20" height="20"/>
-                </activityIndicatorView>
-                <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="success_icon" translatesAutoresizingMaskIntoConstraints="NO" id="EeY-WJ-dRb">
-                    <rect key="frame" x="176" y="53" width="48" height="48"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oeh-bd-6lu">
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="120"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wki-oy-bn5">
+                            <rect key="frame" x="0.0" y="22" width="400" height="77"/>
+                            <subviews>
+                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="i6p-db-fkN">
+                                    <rect key="frame" x="190" y="14" width="20" height="20"/>
+                                </activityIndicatorView>
+                                <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="success_icon" translatesAutoresizingMaskIntoConstraints="NO" id="EeY-WJ-dRb">
+                                    <rect key="frame" x="176" y="0.0" width="48" height="48"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="48" id="6ly-2i-cCE"/>
+                                        <constraint firstAttribute="height" constant="48" id="rmz-3J-gih"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment Confirmation..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glC-gK-Wnx">
+                                    <rect key="frame" x="108" y="56" width="184" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment Completed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a2f-A4-vAC">
+                                    <rect key="frame" x="122" y="56" width="156" height="21"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" red="0.33333333333333331" green="0.65490196078431373" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="a2f-A4-vAC" firstAttribute="top" secondItem="glC-gK-Wnx" secondAttribute="top" id="2TC-Zu-7Gx"/>
+                                <constraint firstItem="glC-gK-Wnx" firstAttribute="top" secondItem="EeY-WJ-dRb" secondAttribute="bottom" constant="8" id="5oa-sR-IKK"/>
+                                <constraint firstItem="glC-gK-Wnx" firstAttribute="centerX" secondItem="Wki-oy-bn5" secondAttribute="centerX" id="65i-Ab-Vhj"/>
+                                <constraint firstItem="a2f-A4-vAC" firstAttribute="centerX" secondItem="Wki-oy-bn5" secondAttribute="centerX" id="HjR-eE-AAo"/>
+                                <constraint firstItem="i6p-db-fkN" firstAttribute="centerX" secondItem="EeY-WJ-dRb" secondAttribute="centerX" id="I0g-LX-iZp"/>
+                                <constraint firstItem="i6p-db-fkN" firstAttribute="centerY" secondItem="EeY-WJ-dRb" secondAttribute="centerY" id="JxJ-Iy-HrE"/>
+                                <constraint firstItem="EeY-WJ-dRb" firstAttribute="top" secondItem="Wki-oy-bn5" secondAttribute="top" id="ODO-m8-4si"/>
+                                <constraint firstItem="EeY-WJ-dRb" firstAttribute="centerX" secondItem="Wki-oy-bn5" secondAttribute="centerX" id="ZKC-Ha-VjY"/>
+                                <constraint firstAttribute="bottom" secondItem="glC-gK-Wnx" secondAttribute="bottom" id="xzH-QC-FOK"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="48" id="6ly-2i-cCE"/>
-                        <constraint firstAttribute="height" constant="48" id="rmz-3J-gih"/>
+                        <constraint firstItem="Wki-oy-bn5" firstAttribute="leading" secondItem="Oeh-bd-6lu" secondAttribute="leading" id="DYS-fw-cYZ"/>
+                        <constraint firstItem="Wki-oy-bn5" firstAttribute="centerY" secondItem="Oeh-bd-6lu" secondAttribute="centerY" id="Wki-VL-wgb"/>
+                        <constraint firstAttribute="height" constant="120" id="iy0-Ug-0U7"/>
+                        <constraint firstAttribute="trailing" secondItem="Wki-oy-bn5" secondAttribute="trailing" id="z0h-3a-Bx8"/>
+                        <constraint firstItem="Wki-oy-bn5" firstAttribute="centerX" secondItem="Oeh-bd-6lu" secondAttribute="centerX" id="zxy-Yr-CYK"/>
                     </constraints>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment Confirmation..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glC-gK-Wnx">
-                    <rect key="frame" x="108" y="100" width="184" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payment Completed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a2f-A4-vAC">
-                    <rect key="frame" x="122" y="114" width="156" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.33333333333333331" green="0.65490196078431373" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="i6p-db-fkN" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="LMU-hU-G5N"/>
-                <constraint firstItem="glC-gK-Wnx" firstAttribute="top" secondItem="i6p-db-fkN" secondAttribute="bottom" constant="13" id="TTN-He-oNi"/>
-                <constraint firstItem="EeY-WJ-dRb" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Wn6-cu-NnL"/>
-                <constraint firstItem="a2f-A4-vAC" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dtA-6U-gcC"/>
-                <constraint firstItem="a2f-A4-vAC" firstAttribute="top" secondItem="EeY-WJ-dRb" secondAttribute="bottom" constant="13" id="hBM-sE-e12"/>
-                <constraint firstItem="EeY-WJ-dRb" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="ldg-Fv-jXg"/>
-                <constraint firstItem="a2f-A4-vAC" firstAttribute="top" secondItem="i6p-db-fkN" secondAttribute="bottom" constant="13" id="rQm-9C-MaZ"/>
-                <constraint firstItem="i6p-db-fkN" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="rl6-h7-Nka"/>
-                <constraint firstItem="glC-gK-Wnx" firstAttribute="top" secondItem="EeY-WJ-dRb" secondAttribute="bottom" constant="-1" id="vwz-PH-6jk"/>
-                <constraint firstItem="glC-gK-Wnx" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="yu3-j0-q6c"/>
+                <constraint firstAttribute="bottom" secondItem="Oeh-bd-6lu" secondAttribute="bottom" id="34b-fo-1tP"/>
+                <constraint firstItem="Oeh-bd-6lu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="J8Y-lL-nNa"/>
+                <constraint firstAttribute="bottom" secondItem="Oeh-bd-6lu" secondAttribute="bottom" id="ZHa-qI-GPu"/>
+                <constraint firstAttribute="bottom" secondItem="Oeh-bd-6lu" secondAttribute="bottom" id="a79-qe-HdA"/>
+                <constraint firstItem="Oeh-bd-6lu" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="fpb-vb-pX2"/>
+                <constraint firstItem="Oeh-bd-6lu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="gAD-Ob-oMn"/>
+                <constraint firstItem="Oeh-bd-6lu" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="lbc-Sn-N5N"/>
+                <constraint firstAttribute="trailing" secondItem="Oeh-bd-6lu" secondAttribute="trailing" id="tgz-Ip-kwb"/>
+                <constraint firstAttribute="trailing" secondItem="Oeh-bd-6lu" secondAttribute="trailing" id="txz-l6-R0k"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
-                    <exclude reference="vwz-PH-6jk"/>
-                    <exclude reference="rQm-9C-MaZ"/>
+                    <exclude reference="34b-fo-1tP"/>
+                    <exclude reference="a79-qe-HdA"/>
+                    <exclude reference="gAD-Ob-oMn"/>
+                    <exclude reference="lbc-Sn-N5N"/>
+                    <exclude reference="txz-l6-R0k"/>
                 </mask>
             </variation>
             <connections>
@@ -61,7 +93,7 @@
                 <outlet property="paymentCompletedLabel" destination="a2f-A4-vAC" id="Jm6-yz-rdA"/>
                 <outlet property="paymentConfirmationLabel" destination="glC-gK-Wnx" id="CSA-rC-svq"/>
             </connections>
-            <point key="canvasLocation" x="418" y="332"/>
+            <point key="canvasLocation" x="418" y="315"/>
         </view>
     </objects>
     <resources>
