--- a/PositionIn/Projects/ProjectsIntroViewController/PositionIn.ProjectsIntroViewController.xib
+++ b/PositionIn/Projects/ProjectsIntroViewController/PositionIn.ProjectsIntroViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProjectsIntroViewController" customModule="PositionIn" customModuleProvider="target">
@@ -209,6 +209,7 @@
                 <constraint firstItem="z3r-eM-BfZ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Xqv-hp-op4"/>
                 <constraint firstAttribute="trailing" secondItem="z3r-eM-BfZ" secondAttribute="trailing" id="sSP-0s-4Fg"/>
             </constraints>
+            <point key="canvasLocation" x="454" y="360"/>
         </view>
     </objects>
     <resources>
